Web Inspector: Inspector should be able to be docked to the bottom of a narrow window https://bugs.webkit.org/show_bug.cgi?id=146871

Reviewed by Timothy Hatcher.

Source/WebCore:

* inspector/InspectorFrontendClientLocal.cpp:

Source/WebInspectorUI:

* UserInterface/Views/Toolbar.css:
(@media (max-width: 539px)): Hide download button to fit search field into the screen.

Source/WebKit/mac:

* WebCoreSupport/WebInspectorClient.mm:

Source/WebKit2:

* UIProcess/WebInspectorProxy.cpp:
* UIProcess/mac/WebInspectorProxyMac.mm:
(WebKit::WebInspectorProxy::platformCanAttach):
* WebProcess/WebPage/WebInspector.cpp:


Canonical link: https://commits.webkit.org/164960@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186724 268f45cc-cd09-0410-ab3c-d52691b4dbfc