Source/WebKit2/UIProcess/WebInspectorProxy.cpp
@@ -52,7 +52,7 @@ using namespace WebCore;
 
 namespace WebKit {
 
-const unsigned WebInspectorProxy::minimumWindowWidth = 750;
+const unsigned WebInspectorProxy::minimumWindowWidth = 500;
 const unsigned WebInspectorProxy::minimumWindowHeight = 400;
 
 const unsigned WebInspectorProxy::initialWindowWidth = 1000;
