Source/WebKit2/UIProcess/mac/WebInspectorProxyMac.mm
@@ -490,7 +490,7 @@ bool WebInspectorProxy::platformCanAttach(bool webProcessCanAttach)
 
     static const float minimumAttachedHeight = 250;
     static const float maximumAttachedHeightRatio = 0.75;
-    static const float minimumAttachedWidth = 750;
+    static const float minimumAttachedWidth = 500;
 
     NSRect inspectedViewFrame = inspectedView.frame;
 
